# comfyui_qwen3_tts_mlx

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
src/comfyui_qwen3_tts_mlx/: nodes.py
tests/: __init__.py  test_comfyui_qwen3_tts_mlx.py
workflows/: qwen3tts_mlx_demo.json
